fix(css): align mat-icon

--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -23,6 +23,10 @@
 
   .section-icon {
     color: #336790;
+
+    mat-icon {
+      vertical-align: middle;
+    }
   }
 
   .hover-only {
